@@ -1,5 +1,14 @@
 2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
+    (isPointInRect): New utility method,
+    * source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
+    (drawItem): Modified bounds check for inclusion of chart entity,
+    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
+    (drawSecondaryPass): Modified bounds check for inclusion of chart entity.
+
+2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
+
     * swt/org/jfree/experimental/chart/swt/ChartComposite.java
     (getChartRenderingInfo): New method,
     (isDomainZoomable): Likewise,
